# projet-getaround-bloc5

./: .env.dist  .gitignore  .gitmodules  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: main.py  requirements.txt
dashboard/: Dockerfile  app.py  entrypoint.sh  main.py  requirements.txt  users.json  users.json.dist
mlflow/: requirements.txt
notebooks/: 01_delay_analysis_eda.ipynb  02_pricing_eda_feature_eng.ipynb  03_model_training_eval.ipynb
outputs/models/: best_pricing_model_xgb.joblib  model_comparison.csv  pricing_preprocessed.joblib
