[project]
name = "projet-getaround-bloc5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "matplotlib>=3.10.9",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.34.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.45.0",
    "xgboost>=3.2.0",
]
