[project]
name = "projet-getaround-bloc5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "matplotlib>=3.10.9",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.34.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.45.0",
    "xgboost>=3.2.0",
    "mlflow>=1.27.0,<2",
    "protobuf>=3.20,<5",
    "setuptools>=69.0,<81",
    "sqlalchemy>=1.4.0,<2.0",
    "boto3>=1.43.11",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "awscli>=1.45.11",
]
